--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,18 +1,12 @@
-<!--
-  Generated template for the TabsPage page.
+<ion-tabs selectedIndex="1" color="primary">
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
+    <!-- PAGE 0 -->
+    <ion-tab tabIcon="hammer" tabTitle="Ajustes" [root]="tab2"></ion-tab>
+    <!-- PAGE 1 -->
 
-  <ion-navbar>
-    <ion-title>tabs</ion-title>
-  </ion-navbar>
+    <ion-tab tabIcon="alarm" tabTitle="Principal" [root]="tab1"></ion-tab>
+    <!-- PAGE 2 -->
 
-</ion-header>
+    <ion-tab tabIcon="hammer" tabTitle="Ajustes" [root]="tab2"></ion-tab>
 
-
-<ion-content padding>
-
-</ion-content>
+</ion-tabs>
