--- a/src/pages/ajustes/ajustes.html
+++ b/src/pages/ajustes/ajustes.html
@@ -4,15 +4,21 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<ion-header color="primary">
 
-  <ion-navbar>
-    <ion-title>ajustes</ion-title>
-  </ion-navbar>
+    <ion-navbar>
+        <ion-title>Ajustes</ion-title>
+    </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+    <button ion-button block (click)="activarPrincial()">
+      Activar Principal
+    </button>
 
+    <button ion-button block color="danger" (click)="mostar_modal()">
+        Mostrar Modal
+    </button>
 </ion-content>
