--- a/src/pages/modal/modal.html
+++ b/src/pages/modal/modal.html
@@ -6,13 +6,21 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>modal</ion-title>
-  </ion-navbar>
+    <ion-navbar>
+        <ion-title>Modal Page</ion-title>
+    </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+    <h1>Modal</h1>
 
+    <button ion-button block (click)="cerarrConParametros()">
+        Cerrar con parametros
+    </button>
+
+    <button ion-button block color="danger" (click)="cerarrSinParametros()">
+        Cerrar sin parametros
+    </button>
 </ion-content>
