--- a/src/pages/principal/principal.html
+++ b/src/pages/principal/principal.html
@@ -1,10 +1,27 @@
 <ion-header>
+    <ion-navbar color="primary">
+        <button menuToggle ion-button icon-only>
+            <ion-icon name="menu"></ion-icon>
+        </button>
+        <ion-title>
+            Page Title
+        </ion-title>
+    </ion-navbar>
+</ion-header>
+
+<!-- <ion-header>
 
     <ion-navbar color="primary">
-        <ion-title text-center>PRINCIPAL</ion-title>
+        <ion-buttons start>
+            <button (click)="mostrarMenu()" ion-button icon-only>
+                <ion-icon name="menu"></ion-icon>
+            </button>
+        </ion-buttons>
+        <ion-title>Principal - Root</ion-title>
     </ion-navbar>
 
-</ion-header>
+
+</ion-header> -->
 
 
 <ion-content padding>
